# syhttp

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
syhttp/: __init__.py  api.py  client.py  cookies.py  exceptions.py  request.py  response.py  url.py
syhttp/src/: __init__.py  api.py  client.py  response.py  url.py
