[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "syhttp"
version = "1.2.2"
description = "A simple, asynchronous Python HTTP client built on pure asyncio"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "CodemHax" }]
keywords = ["http", "async", "asyncio", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/codemhax/syhttp"